# pytorch_lightning_sandbox

./: .gitignore  README.md  pyproject.toml
pl-checkpoints/: sample-epoch=06-val_loss=0.348-val_acc=28.042.ckpt  sample-epoch=07-val_loss=0.352-val_acc=28.035.ckpt  sample-epoch=08-val_loss=0.350-val_acc=28.083.ckpt
run/: inference.py  train.py
src/: datamodule.py  model.py  modelmodule.py
