[project]
name = "pytorch-lightning-sandbox"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shyu61", email = "ohs6261@gmail.com" }
]
dependencies = [
    "torch>=2.1.0",
    "pytorch_lightning>=2.1.1",
    "torchvision>=0.16.0",
    "setuptools>=68.2.2",
    "black>=23.11.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
